// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> name defaults to Text 1`] = `
<text
  name={undefined}
  resizingConstraint={undefined}
  style={undefined}
/>
`;

exports[`<Text /> name passes its name 1`] = `
<text
  name="foo"
  resizingConstraint={undefined}
  style={undefined}
/>
`;

exports[`<Text /> passes its children 1`] = `
<text
  name={undefined}
  resizingConstraint={undefined}
  style={undefined}
>
  foo
</text>
`;

exports[`<Text /> style accepts a StyleSheet ordinal 1`] = `
<text
  name={undefined}
  resizingConstraint={undefined}
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`<Text /> style accepts a plain object 1`] = `
<text
  name={undefined}
  resizingConstraint={undefined}
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`<Text /> style accepts an array of plain objects and/or StyleSheet ordinals 1`] = `
<text
  name={undefined}
  resizingConstraint={undefined}
  style={
    Object {
      "flex": 1,
      "flexGrow": 1,
    }
  }
/>
`;
